# Marie

./: .env.example  .gitignore  .npmignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  build.sh  config.json  package-lock.json  package.json  pnpm-workspace.yaml  release.sh  test-e2e.js  tsconfig.json  typedoc.json
.claude/: settings.local.json
app/: package.json
docs/: api-encyclopedia.md  api-reference.md  economics.md  getting-started.md  index.md  introduction.md  memory.md  orchestration.md  persistence.md  python-client.md  telegram-tutorial.md  the-agent.md  tools.md  universal-core.md
examples/: basic.ts  cost-aware.ts  fb-marie.ts  js_bridge_test.ts  manual_tool_test.ts  memory-demo.ts  multi-agent.ts  persistence_test.py  python_usage.py  telegram-bot-universal.ts  telegram-bot.ts  tool_usage_python.py  universal_test.py  universal_tool_test.py
facebook/: package.json
integrations/: discord.ts  facebook.ts  index.ts  slack.ts  telegram.ts
login/: package.json
marie-brain/: README.md  index.js  package.json  tsconfig.json
marie-core/: Cargo.toml  build.rs
marie-core/src/: agent.rs  brain.rs  client.rs  ffi.rs  interfaces.rs  lib.rs  memory.rs  models.rs  persistence.rs  routing.rs
marie-core/src/tools/: calculator.rs  mod.rs  shell.rs  web_fetch.rs  web_search.rs
marie-fca/: README.md  index.js  package.json
marie-llm/: README.md  index.d.ts  index.d.ts.map  index.js  index.js.map  package.json  tsconfig.json
marie-mem/: README.md  index.js  package.json
marie-skills/: README.md  index.js  package.json  tsconfig.json
plan/: implementation_plan.md  task.md.resolved
scratch/: test-llm.js  test-skills.js  test_load.cjs  test_tg.ts
src/: agent.ts  client.ts  index.js  (+6 more)
(+236 files in other folders)
