[package]
name = "marie-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.9", features = ["json"] }
regex = "1.10"
once_cell = "1.19"
rusqlite = { version = "0.31", features = ["bundled"] }
urlencoding = "2.1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
